workspace = { members = ["bin"] }
[package]
name = "Visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
image = "0.24.7"
noise = "0.8.2"
#robotics_lib = { path = "../Robotic-Lib" }
robotics_lib = { registry = "kellnr" }
rayon = "1.5.0"
crossbeam-channel = "0.5.11"
smallvec = "1.12.0"
piston_window = "0.122.0"
find_folder = "0.3"
rodio = "0.17.3"
log = "0.4.20"


[dependencies.piston2d-graphics]
version = "*"
features = ["glyph_cache_rusttype"]
